fix: make some Linter adjustments